edit: List turned into Deque