@@ -1,20 +1,21 @@
 package engine.zones;
 import engine.player.Player;
 import engine.cards.Card;
+import java.util.Deque;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.ArrayList;
 public class Zone {
     public ZoneType type;
     public Player owner;
-    public List<Card> cards;
-
+    public Deque<Card> cards;   
     public Zone(ZoneType type, Player owner) {
         this.type = type;
         this.owner = owner;
-        this.cards = new ArrayList<>();
+        this.cards = new LinkedList<>();
     }
     // Accessor methods
-    public List<Card> getCards() {
+    public Deque<Card> getCards() {
         return cards;
     }
     public ZoneType getType() {
@@ -25,7 +26,7 @@ public class Zone {
     }
     // Utility methods
     public void add(Card card) {
-        cards.add(card);
+        cards.addLast(card);
         card.setZone(this);
     }
     public void remove(Card card) {
@@ -37,31 +38,34 @@ public class Zone {
             System.out.println("No cards to draw from " + type);
             return null;
         }
-        return cards.remove(cards.size() - 1);
+        return cards.removeLast();
     }
     public Card drawBottom(){
          if (cards.isEmpty()) {
             System.out.println("No cards to draw from " + type);
             return null;
         }
-        return cards.remove(0);
+        return cards.removeFirst();
     } 
     public Card peekTop() {
         if (cards.isEmpty()) {
             System.out.println("No cards to peek in " + type);
             return null;
         }
-        return cards.get(cards.size() - 1);
+        return cards.peekLast();
     }
     public Card peekBottom() {
         if (cards.isEmpty()) {
             System.out.println("No cards to peek in " + type);
             return null;    
         }
-        return cards.get(0);
+        return cards.peekFirst();
     }
     public void shuffle() {
-        java.util.Collections.shuffle(cards);
+        List<Card> tempList = new ArrayList<>(cards);
+        java.util.Collections.shuffle(tempList);
+        cards.clear();
+        cards.addAll(tempList);
     }
     public boolean contains(Card card) {
         return cards.contains(card);
